--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,17 @@
-.App {
+#body{
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#two{
+  font-size: 20px;
+  font-family: Helvetica, sans-serif;
+  font-weight: 500;
+  padding: 10px 20px;
   color: white;
+  background-color: rgb(51, 176, 218);
+  border-radius: 10px;
+  border: none;
+  margin: 100px; 
+  outline: none;
+
 }
 
-.App-link {
-  color: #09d3ac;
-}
